<resources>
    <string name="app_name" translatable="false">CC 42</string>
    <string name="check_cadet" translatable="false">CheckCadete</string>
    <string name="ok" translatable="false">OK</string>
    <string name="net_err" translatable="false">NetworkError</string>
    <string name="jso_err" translatable="false">JSONError</string>
    <string name="err">Erro</string>
    <string name="menu_home">Início</string>
    <string name="action_logout">Sair</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string name="msg_logout">Tens a certeza que desejas terminar a sessão no CC 42?</string>
    <string name="msg_err_save_sess_user">Erro ao guardar sessão de utilizador</string>
    <string name="qr_code">Código QR</string>
    <string name="close">Fechar</string>
    <string name="msg_permis_camera_denied">Permissão para usar a câmera negada</string>
    <string name="try_again">Tentar novamente</string>
    <string name="cancel">Cancelar</string>
    <string name="msg_nothing_event_available">Nenhum evento disponível\nArraste para tentar carregar eventos</string>
    <string name="msg_registered_event_available">Nenhum inscrito para este evento 😥\nArraste para tentar carregar inscritos</string>
    <string name="align_camera_qr_code">Alinhe a câmara com o CÓDIGO QR</string>
    <string name="cancelled">Cancelado</string>
    <string name="msg_qr_code_invalid">Código QR inválido</string>
    <string name="fechar">Fechar</string>
    <string name="sucess">Sucesso!</string>
    <string name="warning">Aviso!</string>
    <string name="msg_you_already_mark_attendance_event">A presença já foi registada para este evento.</string>
    <string name="msg_sucess_mark_attendance_event">Presença registada.\n</string>
    <string name="msg_error_mark_attendance_event">Erro ao guardar o evento e o participante</string>
    <string name="msg_error_check_attendance_event">Erro ao verificar a presença</string>
    <string name="msg_details_event">Detalhes do evento</string>
    <string name="msg_attendance_list">Lista de Presença</string>
    <string name="turn_on_flashlight">Ligar lanterna</string>
    <string name="turn_off_flashlight">Desligar lanterna</string>
    <string name="scanner">Escanear</string>
    <string name="off_flashlight">Lanterna desligada</string>
    <string name="on_flashlight">Lanterna ligada</string>
    <string name="msg_sucess_mark_event_started">Evento iniciado.\nJá não é possível registar presenças.</string>
    <string name="msg_error_mark_event_started">Erro ao marcar evento como iniciado.</string>
    <string name="msg_sucess_all_users_registered_event_loaded">Estudantes registados carregados</string>
    <string name="text_present">Presente</string>
    <string name="text_absent">Ausente</string>
    <string name="msg_loading_more_data">A carregar mais dados…</string>
    <string name="msg_checking_attendance">A verificar presença…</string>
    <string name="synchronize">Sincronizar</string>
    <string name="synchronization">A sincronizar…</string>
    <string name="msg_synchronization">Lista de presença não está sincronizada. Sincronizar irá remover a lista do armazenamento local</string>
    <string name="msg_attendance_list_synchronized">Lista de presença sincronizada</string>
    <string name="error_msg_attendance_list_synchronized">Erro ao sincronizar lista de presença</string>
    <string name="later">Mais tarde</string>
    <string name="search">Pesquisar</string>
    <string name="name_login">Utilizador | Nome</string>
    <string name="msg_error_get_ids_user_local">Erro ao obter IDs dos estudantes localmente</string>
    <string name="list_reload">Recarregar</string>
    <string name="list_print">Imprimir</string>
    <string name="permission">Permissão</string>
    <string name="whithout_permission_cannot_print">Sem permissão, não pode imprimir a lista</string>
    <string name="msg_folder_not_created">Pasta não criada: </string>
    <string name="pdf_created_sucessfully">PDF criado com sucesso: </string>
    <string name="pdf_not_created">PDF não criado: </string>
    <string name="msg_file_pdf_not_found">Ficheiro PDF não encontrado.</string>
    <string name="msg_no_pdf_viewing_applications_were_found">Nenhuma aplicação para visualizar PDF encontrada</string>
    <string name="list_share">Partilhar</string>
    <string name="whithout_permission_cannot_share">Sem permissão não podes partilhar a lista</string>
    <string name="error_load_logo">Erro ao carregar logotipo</string>
    <string name="full_name">Nome completo</string>
    <string name="login">Login</string>
    <string name="attendance">Presença</string>
    <string name="num">Nº</string>
    <string name="date">Data</string>
    <string name="page">Página </string>
    <string name="msg_attendance_list_empty">A lista de presença está vazia.</string>
    <string name="msg_error_delete_local_attendance_lis">Erro ao eliminar lista de presença local</string>
    <string name="msg_user_unregistered">Não está registado neste evento</string>
    <string name="menu_meals">Refeições</string>
    <string name="meals">Refeições</string>
    <string name="create_meal">Criar</string>
    <string name="meal_name">Nome da refeição</string>
    <string name="meal_description">Descrição da refeição</string>
    <string name="status">Estado</string>
    <string name="block_status">Bloqueado</string>
    <string name="msg_permis_image_denied">Permissão para selecionar imagem negada.</string>
    <string name="quantity">Quantidade</string>
    <string name="msg_permis_open_camera_denied">Permissão para abrir camera negada.</string>
    <string name="save_meal">Refeição guardada com sucesso</string>
    <string name="error_save_meal">Erro ao guardar refeição</string>
    <string name="invalid_name_meal">Nome inválido</string>
    <string name="start_upload_image">Iniciando o carregamento da imagem…</string>
    <string name="error_save_image">Erro ao guardar a imagem</string>
    <string name="error_load_data">Erro ao carregar os dados: </string>
    <string name="meals_not_found">Nenhuma refeição encontrada</string>
    <string name="edit_meal">Editar</string>
    <string name="update_meal">Actualizar</string>
    <string name="nothing_edit">A refeição não pode ser actualizada, não foram feitas alterações</string>
    <string name="error_update_image">Erro ao actualizar imagem: </string>
    <string name="sucess_image_update">Imagem actualizada com sucesso</string>
    <string name="error_update_image_url">Erro ao actualizar URL da imagem: </string>
    <string name="sucess_meal_update">Refeição actualizada com sucesso</string>
    <string name="error_meal_update">Erro ao actualizar refeição: </string>
    <string name="sucess_meal_delete">Refeição eliminada com sucesso!</string>
    <string name="error_meal_delete">Erro ao eliminar refeição: </string>
    <string name="delete_meal">Eliminar</string>
    <string name="error_delete_image">Erro ao eliminar a imagem!</string>
    <string name="msg_not_found_cursus">Nenhum curso encontrado 😥\nArraste para tentar carregar novamente.</string>
    <string name="title_cursus">Cursos</string>
    <string name="_0" translatable="false">0</string>
    <string name="cursu">Curso</string>
    <string name="msg_meals_not_found">Nenhuma refeição encontrada 😥\nArraste para tentar carregar novamente.</string>
    <string name="msg_users_not_found">Nenhum estudante encontrado!\nArraste para tentar carregar novamente.</string>
    <string name="text_signed">Subscrito</string>
    <string name="text_unsigned" translatable="false">N/A</string>
    <string name="msg_user_not_fount_list">Não está na lista.</string>
    <string name="msg_list_whithout_subscription">Lista sem subscrições</string>
    <string name="msg_subscription_list_empty">Lista de subscrições vazia</string>
    <string name="msg_checking_subscription">A verificar subscrições…</string>
    <string name="msg_you_already_subscription">Já subscreveu 😉</string>
    <string name="msg_sucess_subscription">Subscrição feita com sucesso 😊 !</string>
    <string name="msg_error_subscription">Ocorreu um erro durante a subscrição 😯</string>
    <string name="msg_error_check_subscription">Erro ao verificar a subscrição 😪</string>
    <string name="msg_users_not_reload">, provavelmente nem todos os estudantes foram carregados, recarregar para obter todos.</string>
    <string name="subscriptions_list">Lista de subscrições</string>
    <string name="choose_a_option">Escolha uma opção</string>
    <string name="pick_photo">Tirar Foto</string>
    <string name="choose_galery">Escolher da Galeria</string>
    <string name="subscription">Subscrição</string>
    <string name="press_again_out">Pressiona novamente para sair</string>
    <string name="msg_permis_notification_denied">Permissão para receber notificação negada.</string>
    <string name="settings">Definições</string>
    <string name="notificatio_header">Notificações</string>
    <string name="notificatio_title">Receber notificações das refeições</string>
    <string name="notification_summary_off">Não receberá actualizações de refeições</string>
    <string name="notificatio_summary_on">Receberá actualizações de refeições</string>
    <string name="first_portion">Primeira via</string>
    <string name="second_portion">Segunda via</string>
    <string name="language">Idioma</string>
    <string name="select_language_app">Escolha o idioma da aplicação</string>
    <string name="description_app">Check Cadet é uma aplicação que permite aos estudantes da Escola 42 marcarem presença em eventos e subscrever as listas de refeições digitalmente utilizando código QR e a tecnologia NFC.</string>
    <string name="about_app">Sobre e Suporte</string>
    <string name="breakfast">Pequeno almoço</string>
    <string name="lunch">Almoço</string>
    <string name="dinner">Jantar</string>
    <string name="set_breakfast_start_time">Defina a hora de início do Pequeno Almoço</string>
    <string name="set_breakfast_end_time">Defina a hora de fim do Pequeno Almoço</string>
    <string name="set_lunch_start_time">Defina a hora de início do Almoço</string>
    <string name="set_lunch_end_time">Defina a hora de fim do Almoço</string>
    <string name="set_dinner_start_time">Defina a hora de início do Jantar</string>
    <string name="set_dinner_end_time">Defina a hora de fim do Jantar</string>
    <string name="start_time">Hora de Início</string>
    <string name="end_time">Hora de Fim</string>
    <string name="camera_back">Câmera Traseira</string>
    <string name="camera_front">Câmera Frontal</string>
    <string name="list_export" translatable="false">Export CSV</string>
    <string name="register_face_id">Registar Face ID</string>
    <string name="name_creator" translatable="false">António Teca</string>
    <string name="name_user_intra_creator" translatable="false">ateca</string>
    <string name="github_creator" translatable="false">github.com/antoniotecadev</string>
    <string name="email_creator" translatable="false">antonioteca@hotmail.com</string>
    <string name="name_co_creator" translatable="false">António Pedro</string>
    <string name="name_user_intra_co_creator" translatable="false">ansebast</string>
    <string name="github_co_creator" translatable="false">github.com/AntonioSebastiaoPedro</string>
    <string name="email_co_creator" translatable="false">antoniosebastiaopedro19@gmail.com</string>
    <string name="whatsapp" translatable="false">Whatsapp</string>
    <string name="tapToRegister">👇 Toque na área do mapa onde você está localizado.</string>
    <string name="selectedLocation">📍 Local selecionado: Nenhum</string>
    <string name="tipText">💡 Dica: segure por 1s para ver quem está nesta área.</string>
    <string name="location">Localização</string>
    <string name="check_blocked">Verificar bloqueados</string>
    <string name="check_subscription_second_portion">Verificar inscrições</string>
</resources>