<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_list_reload"
        android:icon="@drawable/ic_baseline_sync_24"
        android:title="@string/list_reload"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_list_print"
        android:icon="@drawable/ic_baseline_print_24"
        android:title="@string/list_print"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_list_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/list_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_list_export_csv"
        android:icon="@drawable/baseline_import_export_24"
        android:title="@string/list_export"
        app:showAsAction="ifRoom" />
</menu>