<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sendMessageFragment"
        android:icon="@drawable/baseline_add_comment_24"
        android:orderInCategory="0"
        android:title="@string/about_app"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/messageListFragment"
        android:icon="@drawable/baseline_message_24"
        android:orderInCategory="1"
        android:title="@string/about_app"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:orderInCategory="2"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/aboutDialogFragment"
        android:icon="@drawable/common_full_open_on_phone"
        android:orderInCategory="3"
        android:title="@string/about_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:orderInCategory="4"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>