<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroupMealPortion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonFirstPortion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/first_portion"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButtonSecondPortion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/second_portion"
            android:textColor="@color/white" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBoxSecondPortion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/check_subscription_second_portion"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/radioGroupMealPortion"
        app:layout_constraintStart_toStartOf="@+id/radioGroupMealPortion"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupMealPortion" />

    <CheckBox
        android:id="@+id/checkBoxBlocked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/check_blocked"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxSecondPortion"
        app:layout_constraintStart_toStartOf="@+id/checkBoxSecondPortion"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxSecondPortion" />

</androidx.constraintlayout.widget.ConstraintLayout>