<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.about.AboutDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Descrição da Aplicação -->
        <TextView
            android:id="@+id/appDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="16dp"
            android:justificationMode="inter_word"
            android:maxLines="6"
            android:text="@string/description_app"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VisualLintLongText"
            tools:targetApi="26" />

        <!-- Foto do Criador -->
        <ImageView
            android:id="@+id/creatorPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ateca_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appDescription"
            tools:ignore="ImageContrastCheck" />

        <!-- Nome do Criador -->
        <TextView
            android:id="@+id/creatorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name_creator"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/creatorPhoto" />

        <!-- Links: Intra -->
        <TextView
            android:id="@+id/profileIntraLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/name_user_intra_creator"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/creatorName"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <!-- Links: GitHub -->
        <TextView
            android:id="@+id/githubLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/github_creator"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileIntraLink"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <!-- Links: E-mail -->
        <TextView
            android:id="@+id/emailLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/email_creator"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/githubLink"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <!-- Links: WhatsApp -->
        <TextView
            android:id="@+id/whatsappLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:importantForAccessibility="no"
            android:text="@string/whatsapp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLink"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/coCreatorPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:importantForAccessibility="no"
            android:src="@drawable/pedro_about"
            app:layout_constraintEnd_toEndOf="@+id/whatsappLink"
            app:layout_constraintStart_toStartOf="@+id/whatsappLink"
            app:layout_constraintTop_toBottomOf="@+id/whatsappLink"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/coCreatorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name_co_creator"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coCreatorPhoto" />

        <TextView
            android:id="@+id/coProfileIntraLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/name_user_intra_co_creator"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coCreatorName"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/coGithubLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/github_co_creator"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coProfileIntraLink"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/coEmailLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/email_co_creator"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coGithubLink"
            tools:ignore="TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <!-- Links: WhatsApp Co-Creator -->
        <TextView
            android:id="@+id/coWhatsappLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/whatsapp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coEmailLink"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>